Added PostCount filter to sample page

--- a/Main/Source/Web Services/BBC.DNA.Services.Comments/samples/index.htm
+++ b/Main/Source/Web Services/BBC.DNA.Services.Comments/samples/index.htm
@@ -284,6 +284,7 @@ identity_user_under16: 	<!--#echo var="identity_user_under16" --><br>
           <th colspan="2"><select id="sortBy" name="sortBy" onchange="loaddata();">
                 <option id="Created">Created</option>
                 <option id="LastPosted">LastPosted</option>
+                <option id="PostCount">PostCount</option>
                 </select>
                 <select id="sortDirection" name="sortDirection" onchange="loaddata();">
                 <option id="Descending">Descending</option>
